[ci skip] CMAKE: Fetch, add and link PTPLib against opensmt's certain targets through CMAKE option of PARALLEL

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -238,10 +238,10 @@ target_sources(NameProtectionTest
 target_link_libraries(NameProtectionTest OpenSMT gtest gtest_main)
 gtest_add_tests(TARGET NameProtectionTest)
 
-add_executable(SolverBranchBoundary)
-target_sources(SolverBranchBoundary
-        PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/test_SolverBranchBoundary.cc"
-        )
-
-target_link_libraries(SolverBranchBoundary OpenSMT gtest gtest_main PTPLib::PTPLib)
-gtest_add_tests(TARGET SolverBranchBoundary)
+if(PARALLEL)
+    add_executable(SolverBranchBoundary)
+    target_sources(SolverBranchBoundary PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/test_SolverBranchBoundary.cc")
+    target_link_libraries(SolverBranchBoundary PUBLIC OpenSMT gtest gtest_main PTPLib::PTPLib)
+    target_compile_definitions(SolverBranchBoundary PUBLIC -DCUBE_AND_CONQUER)
+    gtest_add_tests(TARGET SolverBranchBoundary)
+endif()
